--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.0",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "winston": "^3.17.0"
   }
 }
