--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@opentelemetry/sdk-node": "^0.45.0",
     "axios": "^1.7.8",
     "body-parser": "^1.19.0",
+    "bottleneck": "^2.19.5",
+    "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
+    "multer": "^1.4.5-lts.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.0",
